--- a/templates/default/less/variables.less
+++ b/templates/default/less/variables.less
@@ -239,7 +239,7 @@
 @il-btn-primary-border:          @brand-secondary;
 
 //** Text color of inactive buttons
-@il-disabled-btn-color:          #b0b0b0;
+@il-disabled-btn-color:          white;
 //** Background color of inactive buttons
 @il-disabled-btn-bg:             #b0b0b0;
 //** Border color of inactive buttons
